# leidenbase

./: .Rbuildignore  .gitignore  .gitmodules  CHECKLIST  DESCRIPTION  Makefile  Makefile-cigraph  NAMESPACE  NEWS.md  NOTES  NOTES.new  README.md  configure  configure.ac  configure.win  configure.win.ac
R/: leidenbase-package.R  leidenbase.R
doc/: issue_report_install.md
igraph/: MD5
igraph/src/: Makevars.in  Makevars.ucrt  Makevars.win  NetRoutines.cpp  attributes.c  foreign-dl-lexer.c  foreign-dl-parser.h  foreign-lgl-parser.c  foreign-ncol-lexer.c  foreign-ncol-parser.c  foreign-pajek-parser.h  glpk_support.c  init.c  random.c  rinterface.c  rinterface_extra.c
man/: leiden_find_partition.Rd
src/: GraphHelper.h  Makevars  Makevars.in  Makevars.ucrt  Makevars.win  Makevars.win.in  ModularityVertexPartition.h  Optimiser.h  RBConfigurationVertexPartition.cpp  ResolutionParameterVertexPartition.cpp  ResolutionParameterVertexPartition.h  cpp_extern.cpp  dummy.c  dummy.cpp  foreign-dl-lexer.c  foreign-dl-parser.c  foreign-gml-lexer.c  foreign-gml-parser.c  foreign-gml-parser.h  foreign-lgl-lexer.c  foreign-lgl-parser.c  foreign-ncol-lexer.c  foreign-ncol-parser.c  foreign-pajek-lexer.c  foreign-pajek-parser.c  igraph_rinterface.cpp  igraph_rinterface.h  leidenFindPartition.cpp  leidenFindPartition.h  leidenFindPartitionR2C.cpp  rinterface_extra.c
templates/: DESCRIPTION.tpl  Makevars.in.tpl  Makevars.win.in.tpl  Makevars.win.tpl  configure.ac.igraph.tpl  configure.ac.leidenbase.tpl  configure.win.ac.leidenbase.tpl
tests/: testthat.R
vignettes/: leidenbase.Rmd
(+120 files in other folders)
